# GoldFish

./: .gitignore  Cargo.toml  GoldFish_design.md  README.md  docker-compose.yml  rust-toolchain.toml
.cursor/rules/: project-standards.mdc  rust-tokio-actix.mdc  storage-sql-nosql.mdc
crates/api/: Cargo.toml
crates/api/src/: http_client.rs  lib.rs  main.rs  metrics.rs  openapi.rs  settings.rs
crates/api/src/auth/: actor.rs  jwt.rs  mod.rs  plaid.rs
crates/api/src/jobs/: mod.rs  scheduler.rs  worker.rs
crates/api/src/middleware/: api_key.rs  basic_auth.rs  metrics.rs  mod.rs  raw_body.rs
crates/api/src/routes/: customers.rs  internal_api.rs  metrics.rs  mod.rs  openapi.rs  public.rs  storm.rs
crates/api/src/routes/vendors/: bitgo.rs  cognito.rs  docusign.rs  mod.rs  modern_treasury.rs  plaid.rs  taxbit.rs
crates/api/tests/: behaviour_public_api.rs  integration_http_surface.rs  system_e2e.rs
crates/core/: Cargo.toml
crates/core/src/: flags.rs  health.rs  lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: customers.rs  jobs.rs  lib.rs  redis.rs  sql.rs
crates/storage/tests/: job_queue.rs
