 [workspace]
 resolver = "2"
 members = [
   "crates/api",
   "crates/core",
   "crates/storage",
 ]
 
 [workspace.package]
 edition = "2024"
 license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
 actix-web = "4"
 anyhow = "1"
 async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
 config = "0.15"
 once_cell = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "2"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
 utoipa = { version = "5", features = ["actix_extras", "chrono"] }
 utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
prometheus = "0.13"
tokio-cron-scheduler = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
futures-util = "0.3"
sha2 = "0.10"
bytes = "1"
 
 # SQL
 sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros"] }
 uuid = { version = "1", features = ["v4", "serde"] }
 
 # NoSQL / caching
 deadpool-redis = "0.18"
 redis = { version = "0.29", features = ["tokio-comp"] }
