 [package]
 name = "goldfish-api"
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
 
 [dependencies]
 actix-web.workspace = true
 anyhow.workspace = true
 config.workspace = true
 once_cell.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 utoipa.workspace = true
 utoipa-swagger-ui.workspace = true
 
 goldfish-core = { path = "../core" }
 goldfish-storage = { path = "../storage" }
