 [package]
 name = "goldfish-api"
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
 
 [dependencies]
 actix-web.workspace = true
 anyhow.workspace = true
 config.workspace = true
 once_cell.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 utoipa.workspace = true
 utoipa-swagger-ui.workspace = true
prometheus.workspace = true
tokio-cron-scheduler.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
futures-util.workspace = true
sha2.workspace = true
bytes.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
 
 goldfish-core = { path = "../core" }
 goldfish-storage = { path = "../storage" }

[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
