 [package]
 name = "goldfish-storage"
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
 
 [features]
 mongodb = ["dep:mongodb"]
 
 [dependencies]
 anyhow.workspace = true
 async-trait.workspace = true
 chrono.workspace = true
 deadpool-redis.workspace = true
mongodb = { version = "3", optional = true }
 redis.workspace = true
serde.workspace = true
serde_json.workspace = true
 sqlx.workspace = true
 tracing.workspace = true
 uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
